--- a/src/elements/dialogs/ticket-dialog.html
+++ b/src/elements/dialogs/ticket-dialog.html
@@ -269,6 +269,7 @@
                                 id: this.defaults.ref,
                                 type: vm.plan,
                                 photo: vm.photo,
+                                coupon: '',
                             };
                             dialogsActions.closeDialog(DIALOGS.TICKET);
                             
