added swags block

--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -10,6 +10,7 @@
 <link rel="import" href="../elements/featured-videos.html">
 <link rel="import" href="../elements/subscribe-block.html">
 <link rel="import" href="../elements/gallery-block.html">
+<link rel="import" href="../elements/swags-block.html">
 <link rel="import" href="../elements/map-block.html">
 <link rel="import" href="../elements/about-organizer-block.html">
 <link rel="import" href="../mixins/scroll-functions.html">
@@ -197,8 +198,9 @@
     <speakers-block></speakers-block>
     <subscribe-block></subscribe-block>
     <tickets-block></tickets-block>
-    <gallery-block></gallery-block>
+    <swags-block></swags-block>
     <about-organizer-block></about-organizer-block>
+    <gallery-block></gallery-block>
     <featured-videos></featured-videos>
     <latest-posts-block></latest-posts-block>
     <map-block></map-block>
