--- a/src/mixins/redux-mixin.html
+++ b/src/mixins/redux-mixin.html
@@ -111,6 +111,11 @@
       fetchingError: null,
       list: [],
     },
+    swags: {
+      fetching: false,
+      fetchingError: null,
+      list: [],
+    },
     team: {
       fetching: false,
       fetchingError: null,
@@ -141,6 +146,7 @@
       sessions: sessionsReducer(state.sessions, action),
       schedule: scheduleReducer(state.schedule, action),
       gallery: galleryReducer(state.gallery, action),
+      swags: swagsReducer(state.gallery, action),
       team: teamReducer(state.team, action),
       user: userReducer(state.user, action),
       subscribed: subscribeReducer(state.subscribed, action),
