played with firebase cloud functions

--- a/src/elements/swags-block.html
+++ b/src/elements/swags-block.html
@@ -169,7 +169,7 @@
         super.connectedCallback();
 
         if (!this.swags || !this.swags.length) {
-          this.dispatch(swagsActions.fetchswags());
+          this.dispatch(swagsActions.fetchSwags());
         }
       }
     }
