--- a/src/mixins/redux-mixin.html
+++ b/src/mixins/redux-mixin.html
@@ -146,7 +146,7 @@
       sessions: sessionsReducer(state.sessions, action),
       schedule: scheduleReducer(state.schedule, action),
       gallery: galleryReducer(state.gallery, action),
-      swags: swagsReducer(state.gallery, action),
+      swags: swagsReducer(state.swags, action),
       team: teamReducer(state.team, action),
       user: userReducer(state.user, action),
       subscribed: subscribeReducer(state.subscribed, action),
