--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
-  var Tawk_API = Tawk_API || {} ;
+  var Tawk_API = Tawk_API || {};
   var Tawk_LoadStart = new Date();
   (function () {
     var s1 = document.createElement('script');
-    var s0 = document.getElementsByTagName("script")[0];
+    var s0 = document.getElementsByTagName('script')[0];
     s1.async = true;
     s1.src = 'https://embed.tawk.to/5bbb8441b033e9743d02c464/default';
     s1.charset = 'UTF-8';
