--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   Please enable JavaScript to view this website.
 </noscript>
 <!--Start of Tawk.to Script-->
-<script type="text/javascript">
+<script>
   var Tawk_API = Tawk_API || {},
     Tawk_LoadStart = new Date();
   (function () {
