--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
 <!--Start of Tawk.to Script-->
-<script type="text/javascript">
+<script>
   var Tawk_API = Tawk_API || {},
     Tawk_LoadStart = new Date();
   (function () {
