--- a/src/elements/tickets-block.html
+++ b/src/elements/tickets-block.html
@@ -304,7 +304,7 @@
                     
                 }
             };
-              xmlhttp.open("GET", "https://devfestss.ml/api/coupon?code=" + coupon);
+              xmlhttp.open("GET", "{$ emailServer $}/api/coupon?code=" + coupon);
               xmlhttp.send();
         }
       } 
