--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -145,8 +145,8 @@
       <div class="home-content" layout vertical center>
         <plastic-image class="hero-logo" srcset="/images/logo.svg" alt="{$ title $}"></plastic-image>
         <div class="info-items highlight-font">
+          <h3 class="info-item">{$ heroSettings.home.description $}</h3>
           <div class="info-item">{$ location.city $}. {$ dates $}</div>
-          <div class="info-item">{$ heroSettings.home.description $}</div>
         </div>
 
 
