--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -195,7 +195,7 @@
     <about-block></about-block>
     <speakers-block></speakers-block>
     <subscribe-block></subscribe-block>
-    <tickets-block></tickets-block>
+   <!-- <tickets-block></tickets-block> -->
     <swags-block></swags-block>
     <about-organizer-block></about-organizer-block>
     <gallery-block></gallery-block>
